--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" data-theme="light">
    <head>
       <meta charset="UTF-8" />
-      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <link
+         rel="icon"
+         type="image/svg+xml"
+         href="./src/assets/Icons/parcel-icon-svgrepo-com.svg"
+      />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>ParcelPro</title>
    </head>
